--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaque: Developer</title>
     <link rel="icon" href="images/squirrel.png">
@@ -22,7 +21,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#skills">Skills & Tools</a>
+                        <a href="#skills">Skills</a>
                     </li>
                     <li>
                         <a href="#work">Works</a>
@@ -67,8 +66,8 @@
             <section class="skills" id="skills">
                 <div class="wrapper">
                     <div>
-                        <h1>SKILLS & TOOLS</h1>
-                        <p>My tool box and things I can do</p>
+                        <h1>SKILLS</h1>
+                        <h3>My tool box...</h3>
                     </div>
                     <div class="icons-container">
                         <div>
@@ -122,10 +121,9 @@
                 <div class="wrapper">
                     <div class="work-title">
                         <h1>WORKS</h1>
-                        <p>What I've built so far...</p>
+                        <h3>What I've built so far...</h3>
                     </div>
                     <div class="container-work">
-                        <img src="images/tic-tac-toe.gif" alt="tic-tac-toe" />
                         <h3>Tic Tac Toe</h3>
                         <p>
                             This was my first time trying to solve some problems using code.
@@ -146,6 +144,7 @@
                         <div class="link">
                             <a href="https://github.com/jaqueelizandro/tic-tac-toe" target="blank">Git Repo</a>
                         </div>
+                        <img src="images/tic-tac-toe.gif" alt="tic-tac-toe" />
                     </div>
                     <div class="container-work2">
                         <h3>Movie Gallery</h3>
@@ -169,7 +168,6 @@
                         <img src="images/movies-gallery.gif" alt="movies-gallery" />
                     </div>
                     <div class="container-work">
-                        <img src="images/expense-trackr.gif" alt="expense-trackr" />
                         <h3>Expense Trackr</h3>
                         <span>
                             This was my first group project.
@@ -188,6 +186,7 @@
                         <div class="link">
                             <a href="https://github.com/Lyndating/react-expense-trackr" target="blank">Git Repo</a>
                         </div>
+                        <img src="images/expense-trackr.gif" alt="expense-trackr" />
                     </div>
                 </div>
             </section>
@@ -195,7 +194,7 @@
                 <div class="wrapper">
                     <div>
                         <h1>CONTACT</h1>
-                        <p>Get in touch</p>
+                        <h3>Get in touch</h3>
                     </div>
                     <div class="container-contact">
                         <a href="mailto: jaque@elizandro.com.br" target="blank">
