mobile firt on container works

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <div>
                         <p>
-                            I've worked in the Business Administration industry for almost 17y. I always loved my job and aimed to keep growing and find new challenges. But after all those years, I felt like I hit the ceiling and just felt meh! I felt I yearned to learn more, something different.
+                            I've worked in the Business Administration industry for almost 17y. I always loved my job and aimed to keep growing and find new challenges. But after all those years, I just felt like meh - it looked like I had hit the ceiling, and I knew I yearned to learn more, something different.
                         </p>
                         <p>
                             So, I decided to seek a career change, and Software Engineer seems to be a good path. I was always surrounded by tech people and always enjoyed their talks and being part of solving the problems they faced.
@@ -138,11 +138,13 @@
                             <i class="devicon-jquery-plain"></i>
                             <i class="devicon-javascript-plain"></i>
                         </div>
-                        <div class="link">
-                            <a href="https://projectzero-tictactoe.netlify.app" target="blank">Try it on</a>
-                        </div>
-                        <div class="link">
-                            <a href="https://github.com/jaqueelizandro/tic-tac-toe" target="blank">Git Repo</a>
+                        <div class="container-link">
+                            <div class="link">
+                                <a href="https://projectzero-tictactoe.netlify.app" target="blank">Try it on</a>
+                            </div>
+                            <div class="link">
+                                <a href="https://github.com/jaqueelizandro/tic-tac-toe" target="blank">Git Repo</a>
+                            </div>
                         </div>
                         <img src="images/tic-tac-toe.gif" alt="tic-tac-toe" />
                     </div>
@@ -159,11 +161,13 @@
                             <i class="devicon-postgresql-plain"></i>
                             <i class="devicon-css3-plain"></i>
                         </div>
-                        <div class="link">
-                            <a href="https://projectone-moviesgallery.herokuapp.com" target="blank">Try it on</a>
-                        </div>
-                        <div class="link">
-                            <a href="https://github.com/jaqueelizandro/movies-gallery" target="blank">Git Repo</a>
+                        <div class="container-link">
+                            <div class="link">
+                                <a href="https://projectone-moviesgallery.herokuapp.com" target="blank">Try it on</a>
+                            </div>
+                            <div class="link">
+                                <a href="https://github.com/jaqueelizandro/movies-gallery" target="blank">Git Repo</a>
+                            </div>
                         </div>
                         <img src="images/movies-gallery.gif" alt="movies-gallery" />
                     </div>
@@ -180,11 +184,13 @@
                             <i class="devicon-bootstrap-plain"></i>
                             <i class="devicon-css3-plain"></i>
                         </div>
-                        <div class="link">
-                            <a href="https://expense-trackr0.netlify.app" target="blank">Try it on</a>
-                        </div>
-                        <div class="link">
-                            <a href="https://github.com/Lyndating/react-expense-trackr" target="blank">Git Repo</a>
+                        <div class="container-link">
+                            <div class="link">
+                                <a href="https://expense-trackr0.netlify.app" target="blank">Try it on</a>
+                            </div>
+                            <div class="link">
+                                <a href="https://github.com/Lyndating/react-expense-trackr" target="blank">Git Repo</a>
+                            </div>
                         </div>
                         <img src="images/expense-trackr.gif" alt="expense-trackr" />
                     </div>
