fixed resize gif

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                     </div>
                     <div class="container-work">
                         <h3>Tic Tac Toe</h3>
-                        <p>
+                        <span>
                             This was my first time trying to solve some problems using code.
 
                             As a General Assembly student, this project required building this code from scratch, and it was very challenging to put into practice what I had learned so far about HTML, CSS and JS (using jQuery).
                             
                             In the time frame, I achieved all the project requirements and I made a bonus part to keeping track of multiples rounds with a win counter in the time frame. And also an EASTER EGG, try to find it
-                        </p>
+                        </span>
                         <div class="container-tech">
                             <i class="devicon-css3-plain"></i>
                             <i class="devicon-html5-plain"></i>
@@ -150,11 +150,11 @@
                     </div>
                     <div class="container-work2">
                         <h3>Movie Gallery</h3>
-                        <p>
+                        <span>
                             After five weeks of classes, this was my second project for the General Assembly Software Engineering Immersive boot camp.
 
                             The core requirement for this project was to create a CRUD system - with 3 model associations; partial views (to make a DRY code); handle invalid data in the forms; basic user authorization and authentication system; deployment on Heroku. Besides that, I also challenged myself to deal with an external API (IMDB).
-                        </p>
+                        </span>
                         <div class="container-tech">
                             <i class="devicon-ruby-plain"></i>
                             <i class="devicon-rails-plain"></i>
