includ the split project and change description of all projects

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="wrapper">
                     <div>
                         <h1>ABOUT</h1>
-                        <p>Who is Jaque?</p>
+                        <h3>Who is Jaque?</h3>
                     </div>
                     <div>
                         <p>
@@ -58,7 +58,7 @@
                             So, I decided to seek a career change, and Software Engineer seems to be a good path. I was always surrounded by tech people and always enjoyed their talks and being part of solving the problems they faced.
                         </p>
                         <p>
-                            The enrollment at Software Engineer Immersive Bootcamp at GA was the beginning of this new journey. I've been working towards building a solid career as a full-stack developer. I'm passionate about solving problems and delivering quality. Writing clean and accessible human code matters to me. I'm happiest when I'm creating, learning, exploring and thinking about how to make things better and simpler.
+                            The enrollment at Software Engineer Immersive Bootcamp at GA was the beginning of this new journey. I've been working towards building a solid career as a full-stack developer. I'm passionate about solving problems and delivering quality. Writing clean and accessible human code matters to me. I'm happiest when I'm creating, learning, exploring and thinking about how to make things better and in a simple way.
                         </p>
                     </div>
                 </div>
@@ -123,59 +123,33 @@
                         <h1>WORKS</h1>
                         <h3>What I've built so far...</h3>
                     </div>
-                    <div class="container-work">
-                        <h3>Tic Tac Toe</h3>
-                        <span>
-                            This was my first time trying to solve some problems using code.
-
-                            As a General Assembly student, this project required building this code from scratch, and it was very challenging to put into practice what I had learned so far about HTML, CSS and JS (using jQuery).
-                            
-                            In the time frame, I achieved all the project requirements and I made a bonus part to keeping track of multiples rounds with a win counter in the time frame. And also an EASTER EGG, try to find it
-                        </span>
-                        <div class="container-tech">
-                            <i class="devicon-css3-plain"></i>
-                            <i class="devicon-html5-plain"></i>
-                            <i class="devicon-jquery-plain"></i>
-                            <i class="devicon-javascript-plain"></i>
-                        </div>
-                        <div class="container-link">
-                            <div class="link">
-                                <a href="https://projectzero-tictactoe.netlify.app" target="blank">Try it on</a>
-                            </div>
-                            <div class="link">
-                                <a href="https://github.com/jaqueelizandro/tic-tac-toe" target="blank">Git Repo</a>
-                            </div>
-                        </div>
-                        <img src="images/tic-tac-toe.gif" alt="tic-tac-toe" />
-                    </div>
                     <div class="container-work2">
-                        <h3>Movie Gallery</h3>
+                        <h3>Split</h3>
                         <span>
-                            After five weeks of classes, this was my second project for the General Assembly Software Engineering Immersive boot camp.
-
-                            The core requirement for this project was to create a CRUD system - with 3 model associations; partial views (to make a DRY code); handle invalid data in the forms; basic user authorization and authentication system; deployment on Heroku. Besides that, I also challenged myself to deal with an external API (IMDB).
+                            Split the expenses with your friends and keep track of who owes who.
                         </span>
                         <div class="container-tech">
-                            <i class="devicon-ruby-plain"></i>
+                            <i class="devicon-react-original"></i>
                             <i class="devicon-rails-plain"></i>
                             <i class="devicon-postgresql-plain"></i>
+                            <i class="devicon-bootstrap-plain"></i>
                             <i class="devicon-css3-plain"></i>
                         </div>
                         <div class="container-link">
                             <div class="link">
-                                <a href="https://projectone-moviesgallery.herokuapp.com" target="blank">Try it on</a>
+                                <a href="https://split-project3.netlify.app" target="blank">Try it on</a>
                             </div>
                             <div class="link">
-                                <a href="https://github.com/jaqueelizandro/movies-gallery" target="blank">Git Repo</a>
+                                <a href="https://github.com/jaqueelizandro/split-bill_client" target="blank">Git Repo</a>
                             </div>
                         </div>
-                        <img src="images/movies-gallery.gif" alt="movies-gallery" />
+                        <img src="images/split.gif" alt="split" />
                     </div>
                     <div class="container-work">
                         <h3>Expense Trackr</h3>
                         <span>
-                            This was my first group project.
-                            I was responsible for building the user Authentication System using JWT - JSON Web Token; I also worked in a pair programming to build the CRUD system.
+                            Organize your finances, keeping track of all your expenses and incomes.
+                            <br/>** Group project: I was responsible for building the user Authentication System using JWT - JSON Web Token; I also worked in a pair programming to build the CRUD system.
                         </span>
                         <div class="container-tech">
                             <i class="devicon-react-original"></i>
@@ -194,6 +168,48 @@
                         </div>
                         <img src="images/expense-trackr.gif" alt="expense-trackr" />
                     </div>
+                    <div class="container-work2">
+                        <h3>Movie Gallery</h3>
+                        <span>
+                            Choose your movies, write a review and start to receive some movie recommendations.
+                        </span>
+                        <div class="container-tech">
+                            <i class="devicon-ruby-plain"></i>
+                            <i class="devicon-rails-plain"></i>
+                            <i class="devicon-postgresql-plain"></i>
+                            <i class="devicon-css3-plain"></i>
+                        </div>
+                        <div class="container-link">
+                            <div class="link">
+                                <a href="https://projectone-moviesgallery.herokuapp.com" target="blank">Try it on</a>
+                            </div>
+                            <div class="link">
+                                <a href="https://github.com/jaqueelizandro/movies-gallery" target="blank">Git Repo</a>
+                            </div>
+                        </div>
+                        <img src="images/movies-gallery.gif" alt="movies-gallery" />
+                    </div>
+                    <div class="container-work">
+                        <h3>Tic Tac Toe</h3>
+                        <span>
+                            Simple tic-tac-toe game with a scoreboard where you can keep track of which player is winning.
+                        </span>
+                        <div class="container-tech">
+                            <i class="devicon-css3-plain"></i>
+                            <i class="devicon-html5-plain"></i>
+                            <i class="devicon-jquery-plain"></i>
+                            <i class="devicon-javascript-plain"></i>
+                        </div>
+                        <div class="container-link">
+                            <div class="link">
+                                <a href="https://projectzero-tictactoe.netlify.app" target="blank">Try it on</a>
+                            </div>
+                            <div class="link">
+                                <a href="https://github.com/jaqueelizandro/tic-tac-toe" target="blank">Git Repo</a>
+                            </div>
+                        </div>
+                        <img src="images/tic-tac-toe.gif" alt="tic-tac-toe" />
+                    </div>
                 </div>
             </section>
             <section class="contact" id="contact">
@@ -203,13 +219,13 @@
                         <h3>Get in touch</h3>
                     </div>
                     <div class="container-contact">
-                        <a href="mailto: jaque@elizandro.com.br" target="blank">
+                        <a href="mailto:veeit8gvfr@privaterelay.appleid.com" target="blank">
                             <img src="images/email.png" alt="email" />
                             <p>Click here to say Hello! I’d love to hear from you!</p>
                         </a>
                         <a href="images/Jaque-resume.pdf" target="blank">
                             <img src="images/download.png">
-                            <p>Take a look on my CV</p>
+                            <p>Take a look at my CV</p>
                         </a>
                         <a href="https://www.linkedin.com/in/jaqueelizandro/" target="blank">
                             <img src="images/linkedin.png">
