--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             <img src="images/email.png" alt="email" />
                             <p>Click here to say Hello! I’d love to hear from you!</p>
                         </a>
-                        <a href="images/Jaque-resume.pdf" target="blank">
+                        <a href="images/jaque-resume.pdf" target="blank">
                             <img src="images/download.png">
                             <p>Take a look at my CV</p>
                         </a>
