alternative text on images

--- a/index.html
+++ b/index.html
@@ -219,16 +219,16 @@
                         <h3>Get in touch</h3>
                     </div>
                     <div class="container-contact">
-                        <a href="mailto:veeit8gvfr@privaterelay.appleid.com" target="blank">
-                            <img src="images/email.png" alt="email" />
+                        <a href="mailto:fasts.terrain_0y@icloud.com" target="blank">
+                            <img src="images/email.png" alt="email-icon" />
                             <p>Click here to say Hello! I’d love to hear from you!</p>
                         </a>
                         <a href="images/jaque-resume.pdf" target="blank">
-                            <img src="images/download.png">
+                            <img src="images/download.png" alt="download-icon">
                             <p>Take a look at my CV</p>
                         </a>
                         <a href="https://www.linkedin.com/in/jaqueelizandro/" target="blank">
-                            <img src="images/linkedin.png">
+                            <img src="images/linkedin.png" alt="linkedin-icon">
                             <p>And find me on this online space</p>
                         </a>
                     </div>
@@ -236,7 +236,7 @@
                 </section>
             </main>
         <footer>
-            <p>Designed and Developed by Jaque Elizandro <img src="images/acorn.png" /></p>
+            <p>Designed and Developed by Jaque Elizandro <img src="images/acorn.png" alt="squirrel-nuts" /></p>
         </footer>
     </div>
 </body>
