--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jaque: Developer</title>
+    <title>Jaque: Software Developer</title>
     <link rel="icon" href="images/squirrel.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -219,7 +219,7 @@
                         <h3>Get in touch</h3>
                     </div>
                     <div class="container-contact">
-                        <a href="mailto:fasts.terrain_0y@icloud.com" target="blank">
+                        <a href="mailto:jaque@elizandro.com.br" target="blank">
                             <img src="images/email.png" alt="email-icon" />
                             <p>Click here to say Hello! I’d love to hear from you!</p>
                         </a>
