change photo, and include animation on landing page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaque: Software Developer</title>
-    <link rel="icon" href="images/squirrel.png">
+    <!-- <link rel="icon" href=""> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
@@ -39,9 +39,14 @@
                 <div class="wrapper">
                     <h1>
                         <span>Hello, I'm Jaque!</span>
-                        I'm a developer with a background in business administration.
+                        <span>I am a Developer and
+                        <div class="rw-words rw-words-1">
+                            <span> &#127856; homemade cakes baker.</span>
+                            <span> &#9968;&#65039; hiker enthusiast.</span>
+                            <span> &#9728;&#65039; sunny days lover.</span>
+                            <span> &#9749; coffee addict.</span>
+                        </div>
                     </h1>
-                    <img src="images/profile-jaque.jpeg" alt="jaque" />
                 </div>
             </section>
             <section class="about" id="about">
@@ -50,15 +55,22 @@
                         <h1>ABOUT</h1>
                         <h3>Who is Jaque?</h3>
                     </div>
-                    <div>
+                    <div class="text">
+                        <img src="images/jaque.jpeg" alt="jaque" />
                         <p>
-                            I've worked in the Business Administration industry for almost 17y. I always loved my job and aimed to keep growing and find new challenges. But after all those years, I just felt like meh - it looked like I had hit the ceiling, and I knew I yearned to learn more, something different.
-                        </p>
-                        <p>
-                            So, I decided to seek a career change, and Software Engineer seems to be a good path. I was always surrounded by tech people and always enjoyed their talks and being part of solving the problems they faced.
-                        </p>
-                        <p>
-                            The enrollment at Software Engineer Immersive Bootcamp at GA was the beginning of this new journey. I've been working towards building a solid career as a full-stack developer. I'm passionate about solving problems and delivering quality. Writing clean and accessible human code matters to me. I'm happiest when I'm creating, learning, exploring and thinking about how to make things better and in a simple way.
+                            <span class="title">I'm passionate about solving problems and delivering quality.</span>
+                            </br>
+                            </br>
+                            A few months ago, I decided to take a leap and invest in my career change.
+                            </br>
+                            </br>
+                            Having immersed myself in a Software Engineer world and been able to build some amazing projects, just proved I made the right choice.
+                            </br>
+                            </br>
+                            With a history in Business Administration industry I'm bringing my analytical and logical skills to solve problems and thinking about how to make things better in a simple way.
+                            </br>
+                            </br>
+                            I've been working towards building a solid career as a full-stack developer. As a Software Engineer, deliver efficient solutions using the best practices to write reliable, clean and accessible code matters to me. 
                         </p>
                     </div>
                 </div>
@@ -219,7 +231,7 @@
                         <h3>Get in touch</h3>
                     </div>
                     <div class="container-contact">
-                        <a href="mailto:jaque@elizandro.com.br" target="blank">
+                        <a href="mailto:jaque+port@elizandro.com.br" target="blank">
                             <img src="images/email.png" alt="email-icon" />
                             <p>Click here to say Hello! I’d love to hear from you!</p>
                         </a>
@@ -236,7 +248,7 @@
                 </section>
             </main>
         <footer>
-            <p>Designed and Developed by Jaque Elizandro <img src="images/acorn.png" alt="squirrel-nuts" /></p>
+            <p>Designed and Developed by Jaque Elizandro</p>
         </footer>
     </div>
 </body>
