--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                 </div>
             </section>
             <section class="skills" id="skills">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+                    <polygon fill="white" points="100,0 0,100 100,100"/>
+                </svg>
                 <div class="wrapper">
+
                     <div>
                         <h1>SKILLS</h1>
                         <h3>My tool box...</h3>
@@ -149,7 +153,7 @@
                         </div>
                         <div class="container-link">
                             <div class="link">
-                                <a href="https://split-project3.netlify.app" target="blank">Try it on</a>
+                                <a href="https://split-project3.netlify.app" target="blank">Try it out</a>
                             </div>
                             <div class="link">
                                 <a href="https://github.com/jaqueelizandro/split-bill_client" target="blank">Git Repo</a>
@@ -172,7 +176,7 @@
                         </div>
                         <div class="container-link">
                             <div class="link">
-                                <a href="https://expense-trackr0.netlify.app" target="blank">Try it on</a>
+                                <a href="https://expense-trackr0.netlify.app" target="blank">Try it out</a>
                             </div>
                             <div class="link">
                                 <a href="https://github.com/Lyndating/react-expense-trackr" target="blank">Git Repo</a>
@@ -193,7 +197,7 @@
                         </div>
                         <div class="container-link">
                             <div class="link">
-                                <a href="https://projectone-moviesgallery.herokuapp.com" target="blank">Try it on</a>
+                                <a href="https://projectone-moviesgallery.herokuapp.com" target="blank">Try it out</a>
                             </div>
                             <div class="link">
                                 <a href="https://github.com/jaqueelizandro/movies-gallery" target="blank">Git Repo</a>
@@ -214,7 +218,7 @@
                         </div>
                         <div class="container-link">
                             <div class="link">
-                                <a href="https://projectzero-tictactoe.netlify.app" target="blank">Try it on</a>
+                                <a href="https://projectzero-tictactoe.netlify.app" target="blank">Try it out</a>
                             </div>
                             <div class="link">
                                 <a href="https://github.com/jaqueelizandro/tic-tac-toe" target="blank">Git Repo</a>
