--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
                 </div>
             </section>
             <section class="skills" id="skills">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-                    <polygon fill="white" points="100,0 0,100 100,100"/>
-                </svg>
                 <div class="wrapper">
-
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <polygon fill="white" points="100,0 0,100 100,100"/>
+                    </svg>
                     <div>
                         <h1>SKILLS</h1>
                         <h3>My tool box...</h3>
@@ -252,7 +251,7 @@
                 </section>
             </main>
         <footer>
-            <p>Designed and Developed by Jaque Elizandro</p>
+            <p>© 2022 Jaque Elizandro</p>
         </footer>
     </div>
 </body>
