--- a/index.html
+++ b/index.html
@@ -236,16 +236,138 @@
                     <div class="container-contact">
                         <a href="mailto:jaque+port@elizandro.com.br" target="blank">
                             <img src="images/email.png" alt="email-icon" />
-                            <p>Click here to say Hello! I’d love to hear from you!</p>
+                            Click here to say Hello! I’d love to hear from you!
                         </a>
                         <a href="images/jaque-resume.pdf" target="blank">
                             <img src="images/download.png" alt="download-icon">
-                            <p>Take a look at my CV</p>
+                            Take a look at my resume
                         </a>
                         <a href="https://www.linkedin.com/in/jaqueelizandro/" target="blank">
                             <img src="images/linkedin.png" alt="linkedin-icon">
-                            <p>And find me on this online space</p>
+                            Find me on LinkedIn
                         </a>
+                    </div>
+                    <div class="goodreads">
+                        <!-- Show static HTML/CSS as a placeholder in case js is not enabled - javascript include will override this if things work -->
+                        <style type="text/css" media="screen">
+                            .gr_custom_container_1655968187 {
+                            /* customize your Goodreads widget container here*/
+                            border: 1px solid gray;
+                            border-radius:10px;
+                            padding: 10px 5px 10px 5px;
+                            background-color: #FFFFFF;
+                            color: #000000;
+                            width: 375px;
+                            }
+                            .gr_custom_header_1655968187 {
+                            /* customize your Goodreads header here*/
+                            border-bottom: 1px solid gray;
+                            width: 100%;
+                            margin-bottom: 5px;
+                            text-align: center;
+                            font-size: 80%
+                            }
+                            .gr_custom_each_container_1655968187 {
+                            /* customize each individual book container here */
+                            width: 100%;
+                            clear: both;
+                            margin-bottom: 10px;
+                            overflow: auto;
+                            padding-bottom: 4px;
+                            border-bottom: 1px solid #aaa;
+                            }
+                            .gr_custom_book_container_1655968187 {
+                            /* customize your book covers here */
+                            overflow: hidden;
+                            height: 60px;
+                            float: left;
+                            margin-right: 4px;
+                            width: 39px;
+                            }
+                            .gr_custom_author_1655968187 {
+                            /* customize your author names here */
+                            font-size: 10px;
+                            }
+                            .gr_custom_tags_1655968187 {
+                            /* customize your tags here */
+                            font-size: 10px;
+                            color: gray;
+                            }
+                            .gr_custom_rating_1655968187 {
+                            /* customize your rating stars here */
+                            float: right;
+                            }
+                        </style>
+                        <div id="gr_custom_widget_1655968187">
+                            <div class="gr_custom_container_1655968187">
+                                <h2 class="gr_custom_header_1655968187">
+                                <a style="text-decoration: none;" rel="nofollow" target="blank" href="https://www.goodreads.com/review/list/142404458-jaqueline-elizandro?shelf=read&amp;utm_medium=api&amp;utm_source=custom_widget">Jaqueline&#39;s bookshelf: read</a>
+                                </h2>
+                                <div class="gr_custom_each_container_1655968187">
+                                    <div class="gr_custom_book_container_1655968187">
+                                    <a target="blank" title="The Ride of a Lifetime: Lessons Learned from 15 Years as CEO of the Walt Disney Company" rel="nofollow" href="https://www.goodreads.com/review/show/4514982082?utm_medium=api&amp;utm_source=custom_widget"><img alt="The Ride of a Lifetime: Lessons Learned from 15 Years as CEO of the Walt Disney Company" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1556036622l/44525305._SY75_.jpg" /></a>
+                                    </div>
+                                    <div class="gr_custom_title_1655968187">
+                                    <a target="blank" rel="nofollow" href="https://www.goodreads.com/review/show/4514982082?utm_medium=api&amp;utm_source=custom_widget">The Ride of a Lifetime: Lessons Learned from 15 Years as CEO of the Walt Disney Company</a>
+                                    </div>
+                                    <div class="gr_custom_author_1655968187">
+                                    by <a target="blank" rel="nofollow" href="https://www.goodreads.com/author/show/18981546.Robert_Iger">Robert Iger</a>
+                                    </div>
+                                </div>
+                                <div class="gr_custom_each_container_1655968187">
+                                    <div class="gr_custom_book_container_1655968187">
+                                    <a target="blank" title="Casais Inteligentes Enriquecem Juntos" rel="nofollow" href="https://www.goodreads.com/review/show/4494814225?utm_medium=api&amp;utm_source=custom_widget"><img alt="Casais Inteligentes Enriquecem Juntos" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1226627815l/2201211._SX50_.jpg" /></a>
+                                    </div>
+                                    <div class="gr_custom_title_1655968187">
+                                    <a target="blank" rel="nofollow" href="https://www.goodreads.com/review/show/4494814225?utm_medium=api&amp;utm_source=custom_widget">Casais Inteligentes Enriquecem Juntos</a>
+                                    </div>
+                                    <div class="gr_custom_author_1655968187">
+                                    by <a target="blank" rel="nofollow" href="https://www.goodreads.com/author/show/996960.Gustavo_Cerbasi">Gustavo Cerbasi</a>
+                                    </div>
+                                </div>
+                                <div class="gr_custom_each_container_1655968187">
+                                    <div class="gr_custom_book_container_1655968187">
+                                    <a target="blank" title="Harry Potter and the Sorcerer's Stone (Harry Potter, #1)" rel="nofollow" href="https://www.goodreads.com/review/show/4403185471?utm_medium=api&amp;utm_source=custom_widget"><img alt="Harry Potter and the Sorcerer's Stone" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1474154022l/3._SY75_.jpg" /></a>
+                                    </div>
+                                    <div class="gr_custom_title_1655968187">
+                                    <a target="blank" rel="nofollow" href="https://www.goodreads.com/review/show/4403185471?utm_medium=api&amp;utm_source=custom_widget">Harry Potter and the Sorcerer's Stone</a>
+                                    </div>
+                                    <div class="gr_custom_author_1655968187">
+                                    by <a target="blank" rel="nofollow" href="https://www.goodreads.com/author/show/1077326.J_K_Rowling">J.K. Rowling</a>
+                                    </div>
+                                </div>
+                                <div class="gr_custom_each_container_1655968187">
+                                    <div class="gr_custom_book_container_1655968187">
+                                    <a target="blank" title="Daring Greatly: How the Courage to Be Vulnerable Transforms the Way We Live, Love, Parent, and Lead" rel="nofollow" href="https://www.goodreads.com/review/show/4378329224?utm_medium=api&amp;utm_source=custom_widget"><img alt="Daring Greatly: How the Courage to Be Vulnerable Transforms the Way We Live, Love, Parent, and Lead" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1337110319l/13588356._SY75_.jpg" /></a>
+                                    </div>
+                                    <div class="gr_custom_title_1655968187">
+                                    <a target="blank" rel="nofollow" href="https://www.goodreads.com/review/show/4378329224?utm_medium=api&amp;utm_source=custom_widget">Daring Greatly: How the Courage to Be Vulnerable Transforms the Way We Live, Love, Parent, and Lead</a>
+                                    </div>
+                                    <div class="gr_custom_author_1655968187">
+                                    by <a target="blank" rel="nofollow" href="https://www.goodreads.com/author/show/162578.Bren_Brown">Brené Brown</a>
+                                    </div>
+                                </div>
+                                <div class="gr_custom_each_container_1655968187">
+                                    <div class="gr_custom_book_container_1655968187">
+                                    <a target="blank" title="Nonviolent Communication: A Language of Life" rel="nofollow" href="https://www.goodreads.com/review/show/4348710306?utm_medium=api&amp;utm_source=custom_widget"><img alt="Nonviolent Communication: A Language of Life" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1386925124l/71730._SY75_.jpg" /></a>
+                                    </div>
+                                    <div class="gr_custom_title_1655968187">
+                                    <a target="blank" rel="nofollow" href="https://www.goodreads.com/review/show/4348710306?utm_medium=api&amp;utm_source=custom_widget">Nonviolent Communication: A Language of Life</a>
+                                    </div>
+                                    <div class="gr_custom_author_1655968187">
+                                    by <a target="blank" rel="nofollow" href="https://www.goodreads.com/author/show/40541.Marshall_B_Rosenberg">Marshall B. Rosenberg</a>
+                                    </div>
+                                </div>
+                                <br style="clear: both"/>
+                                <center>
+                                <a target="blank" rel="nofollow" href="https://www.goodreads.com/"><img alt="goodreads.com" style="border:0" src="https://s.gr-assets.com/images/widget/widget_logo.gif" /></a>
+                                </center>
+                                <noscript>
+                                Share <a target="blank" rel="nofollow" href="https://www.goodreads.com/">book reviews</a> and ratings with Jaqueline, and even join a <a rel="nofollow" href="https://www.goodreads.com/group">book club</a> on Goodreads.
+                                </noscript>
+                            </div>
+                        </div>
+                        <script src="https://www.goodreads.com/review/custom_widget/142404458.Jaqueline's%20bookshelf:%20read?cover_position=left&cover_size=small&num_books=5&order=d&shelf=read&show_author=1&show_cover=1&show_rating=0&show_review=0&show_tags=1&show_title=1&sort=date_added&widget_bg_color=FFFFFF&widget_bg_transparent=&widget_border_width=1&widget_id=1655968187&widget_text_color=000000&widget_title_size=small&widget_width=medium" type="text/javascript" charset="utf-8"></script>
                     </div>
                 </div>
                 </section>
