fixed mobile layout contact

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
                             background-color: #FFFFFF;
                             color: #000000;
                             width: 375px;
+                            margin-top: 1rem;
                             }
                             .gr_custom_header_1655968187 {
                             /* customize your Goodreads header here*/
