create hamburger menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <header id="home">
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul>
                     <li>
@@ -34,8 +35,10 @@
                     </li>
                 </ul>
             </nav>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
         </header>
-
         <main>
             <div class="nav"></div>
             <section class="home">
