change contact section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <header id="home">
+        <header>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul>
@@ -41,7 +41,7 @@
         </header>
         <main>
             <div class="nav"></div>
-            <section class="home">
+            <section class="home" id="home">
                 <div class="wrapper">
                     <h1>
                         <span>Hello, I'm Jaque!</span>
@@ -263,22 +263,28 @@
                         <h3>Get in touch</h3>
                     </div>
                     <div class="container-contact">
-                        <a href="mailto:jaque+port@elizandro.com.br" target="blank">
+                        <div class="email">
                             <img src="images/email.png" alt="email-icon" />
-                            Click here to say Hello! I’d love to hear from you!
-                        </a>
-                        <a href="images/jaque-resume.pdf" target="blank">
+                            <a href="mailto:jaque+port@elizandro.com.br" target="blank">
+                                EMAIL
+                            </a>
+                        </div>
+                        <div class="resume">
                             <img src="images/download.png" alt="download-icon">
-                            Take a look at my resume
-                        </a>
-                        <a href="https://www.linkedin.com/in/jaqueelizandro/" target="blank">
+                            <a href="images/jaque-resume.pdf" target="blank">
+                                RESUME
+                            </a>
+                        </div>
+                        <div class="linkedin">
                             <img src="images/linkedin.png" alt="linkedin-icon">
-                            Find me on LinkedIn
-                        </a>
+                            <a href="https://www.linkedin.com/in/jaqueelizandro/" target="blank">
+                                LINKEDIN
+                            </a>
+                        </div>
                     </div>
                 </div>
-                </section>
-            </main>
+            </section>
+        </main>
         <footer>
             <p>© 2022 Jaque Elizandro</p>
         </footer>
