--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <h3>Who is Jaque?</h3>
                     </div>
                     <div class="text">
-                        <img src="images/jaque.jpeg" alt="jaque" />
+                        <img src="images/jaque.jpeg" alt="image-jaque-profile" />
                         <p>
                             <span class="title">I'm passionate about solving problems and delivering quality.</span>
                             </br>
@@ -73,7 +73,7 @@
                             Having immersed myself in a Software Engineer world and been able to build some amazing projects, just proved I made the right choice.
                             </br>
                             </br>
-                            With a history in Business Administration industry I'm bringing my analytical and logical skills to solve problems and thinking about how to make things better in a simple way.
+                            With a degree in Business Administration and 17 years of professional work, I'm bringing my problem solving skills to make things better in a simple way.
                             </br>
                             </br>
                             I've been working towards building a solid career as a full-stack developer. As a Software Engineer, deliver efficient solutions using the best practices to write reliable, clean and accessible code matters to me. 
@@ -155,10 +155,16 @@
                         </div>
                         <div class="container-link">
                             <div class="link">
-                                <a href="https://split-project3.netlify.app" target="blank">Try it out</a>
+                                <a href="https://split-project3.netlify.app" target="blank">
+                                    Try it out
+                                    <img src="images/external-link.svg" alt="external link icon" />
+                                </a>
                             </div>
                             <div class="link">
-                                <a href="https://github.com/jaqueelizandro/split-bill_client" target="blank">Git Repo</a>
+                                <a href="https://github.com/jaqueelizandro/split-bill_client" target="blank">
+                                    Git Repo
+                                    <img src="images/external-link.svg" alt="external link icon" />
+                                </a>
                             </div>
                         </div>
                         <img src="images/split.gif" alt="split" />
@@ -178,10 +184,16 @@
                         </div>
                         <div class="container-link">
                             <div class="link">
-                                <a href="https://expense-trackr0.netlify.app" target="blank">Try it out</a>
+                                <a href="https://expense-trackr0.netlify.app" target="blank">
+                                    Try it out
+                                    <img src="images/external-link.svg" alt="external link icon" />
+                                </a>
                             </div>
                             <div class="link">
-                                <a href="https://github.com/Lyndating/react-expense-trackr" target="blank">Git Repo</a>
+                                <a href="https://github.com/Lyndating/react-expense-trackr" target="blank">
+                                    Git Repo
+                                    <img src="images/external-link.svg" alt="external link icon" />
+                                </a>
                             </div>
                         </div>
                         <img src="images/expense-trackr.gif" alt="expense-trackr" />
@@ -199,10 +211,16 @@
                         </div>
                         <div class="container-link">
                             <div class="link">
-                                <a href="https://projectone-moviesgallery.herokuapp.com" target="blank">Try it out</a>
+                                <a href="https://projectone-moviesgallery.herokuapp.com" target="blank">
+                                    Try it out
+                                    <img src="images/external-link.svg" alt="external link icon" />
+                                </a>
                             </div>
                             <div class="link">
-                                <a href="https://github.com/jaqueelizandro/movies-gallery" target="blank">Git Repo</a>
+                                <a href="https://github.com/jaqueelizandro/movies-gallery" target="blank">
+                                    Git Repo
+                                    <img src="images/external-link.svg" alt="external link icon" />
+                                </a>
                             </div>
                         </div>
                         <img src="images/movies-gallery.gif" alt="movies-gallery" />
@@ -220,10 +238,16 @@
                         </div>
                         <div class="container-link">
                             <div class="link">
-                                <a href="https://projectzero-tictactoe.netlify.app" target="blank">Try it out</a>
+                                <a href="https://projectzero-tictactoe.netlify.app" target="blank">
+                                    Try it out
+                                    <img src="images/external-link.svg" alt="external link icon" />
+                                </a>
                             </div>
                             <div class="link">
-                                <a href="https://github.com/jaqueelizandro/tic-tac-toe" target="blank">Git Repo</a>
+                                <a href="https://github.com/jaqueelizandro/tic-tac-toe" target="blank">
+                                    Git Repo
+                                    <img src="images/external-link.svg" alt="external link icon" />
+                                </a>
                             </div>
                         </div>
                         <img src="images/tic-tac-toe.gif" alt="tic-tac-toe" />
