change text and style of the about me section

--- a/index.html
+++ b/index.html
@@ -64,19 +64,46 @@
                     <div class="text">
                         <img src="images/jaque.jpeg" alt="image-jaque-profile" />
                         <p>
-                            <span class="title">I'm passionate about solving problems and delivering quality.</span>
+                            <strong>
+                                I'm passionate about solving problems and delivering
+                                quality.
+                            </strong>
                             </br>
                             </br>
-                            A few months ago, I decided to take a leap and invest in my career change.
+                            I have a degree in Business Administration and 17 years
+                            of professional experience. During this time, I had
+                            the chance to play different roles in Logistics,
+                            Procurement and Manufacturing. 
                             </br>
                             </br>
-                            Having immersed myself in a Software Engineer world and been able to build some amazing projects, just proved I made the right choice.
+                            My goal was always to make things better. I liked
+                            collaborating with the team and using creativity to
+                            find ways to change and improve the process, making
+                            someone else's work easier and more reliable and bringing
+                            better results to the company.
                             </br>
                             </br>
-                            With a degree in Business Administration and 17 years of professional work, I'm bringing my problem solving skills to make things better in a simple way.
+                            My favourite part, though, was when I could use the
+                            technology to help me make the improvements. Writing
+                            pseudocode to work with the developer to build a
+                            different report or a different control at the system,
+                            using some tool to automate the workflow, or even creating
+                            a spreadsheet to facilitate some process or analysis,
+                            were the highlights of my day.
                             </br>
                             </br>
-                            I've been working towards building a solid career as a full-stack developer. As a Software Engineer, deliver efficient solutions using the best practices to write reliable, clean and accessible code matters to me. 
+                            Because this was the kind of work that excited me more,
+                            I decided to invest in my career change into a Developer.
+                            Having immersed myself in the Software Engineer world
+                            and being able to build some amazing projects just proved
+                            I made the right choice.  
+                            </br>
+                            </br>
+                            I've been working towards building a solid career as
+                            a full-stack developer. And as a Software Engineer,
+                            I aim to continue delivering efficient solutions using
+                            the best practices to write reliable, clean and
+                            accessible code.
                         </p>
                     </div>
                 </div>
